First, non-functional implementation of a dummy driver.

--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle_de.properties
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/resources/nl/saxion/nena/opentcs/commadapter/ros2/Bundle_de.properties
@@ -30,3 +30,45 @@ lastReceivedOrderID=Zuletzt empfangene Auftrags-ID:
 currentPoint=Aktueller Punkt:
 ControlsPanelTitle=Steuerung
 StatusPanelTitle=Status
+
+# Control Center
+inputDialog.button_cancel.text=Abbrechen
+inputDialog.button_ok.text=Ok
+inputDialog.button_reset.text=Zur\u00fccksetzen
+ros2CommAdapterPanel.accessibleName=Loopback-Optionen
+ros2CommAdapterPanel.button_dispatchEvent.text=Event versenden
+ros2CommAdapterPanel.button_nextStep.text=N\u00e4chster Schritt
+ros2CommAdapterPanel.button_setProperty.text = Anwenden
+ros2CommAdapterPanel.checkBox_commandProcessingAutomatic.text=Automatik
+ros2CommAdapterPanel.checkBox_commandProcessingManual.text=Manuell
+ros2CommAdapterPanel.checkBox_enableAdapter.text=Loopback-Treiber einschalten
+ros2CommAdapterPanel.checkBox_includeAppendix.text=Nachricht als Anhang hinzuf\u00fcgen:
+ros2CommAdapterPanel.dialog_setEnergyLevel.title=Energie-Level setzen
+ros2CommAdapterPanel.dialog_setOrientationAngle.title=Orientierung setzen
+ros2CommAdapterPanel.dialog_setPosition.title=Fahrzeug-Position setzen
+ros2CommAdapterPanel.dialog_setPrecisePosition.title=Exakte Position setzen
+ros2CommAdapterPanel.dialog_setState.title=Fahrzeug-Zustand setzen
+ros2CommAdapterPanel.label_energyLevel.text=Energie-Level:
+ros2CommAdapterPanel.label_maximumAcceleration.text=Beschleunigung:
+ros2CommAdapterPanel.label_maximumDeceleration.text=Abbremsung:
+ros2CommAdapterPanel.label_maximumForwardVelocity.text=Max. Vorw\u00e4rts-Geschwindigkeit:
+ros2CommAdapterPanel.label_maximumReverseVelocity.text=Max. R\u00fcckw\u00e4rts-Geschwindigkeit:
+ros2CommAdapterPanel.label_operatingTime.text=Operationsdauer
+ros2CommAdapterPanel.label_orientationAngle.text=Orientierung:
+ros2CommAdapterPanel.label_pauseVehicle.text=Fahrzeug anhalten:
+ros2CommAdapterPanel.label_position.text=Position:
+ros2CommAdapterPanel.label_precisePosition.text=Exakte Position:
+ros2CommAdapterPanel.label_propertyKey.text = Schl\u00fcssel:
+ros2CommAdapterPanel.label_state.text=Zustand:
+ros2CommAdapterPanel.panel_adapterStatus.border.title=Adapterzustand
+ros2CommAdapterPanel.panel_commandProcessing.border.title=Kommandoverarbeitung
+ros2CommAdapterPanel.panel_eventDispatching.title=Event-Versand
+ros2CommAdapterPanel.panel_loadHandlingDevice.border.title=Lastaufnahmemittel
+ros2CommAdapterPanel.panel_vehicleProperties.border.title=Fahrzeugeigenschaften
+ros2CommAdapterPanel.panel_vehicleProperty.border.title = Fahrzeug-Property
+ros2CommAdapterPanel.panel_vehicleStatus.border.title=Aktuelle Position
+ros2CommAdapterPanel.radioButton_removeProperty.text=Property l\u00f6schen
+ros2CommAdapterPanel.radioButton_setProperty.text=Diesen Wert setzen:
+ros2CommAdapterPanel.textArea_precisePosition.positionNotSetPlaceholder=-
+ros2CommAdapterPanel.textField_orientationAngle.angleNotSetPlaceholder=-
+ros2CommunicationAdapterDescription.description=Loopback-Treiber (virtuelles Fahrzeug)
