Add file formats for developers guide

--- a/openTCS-NeNa-Documentation/src/docs/developers_guide/developers_guide.adoc
+++ b/openTCS-NeNa-Documentation/src/docs/developers_guide/developers_guide.adoc
@@ -1,4 +1,5 @@
-[[anchor]]Development Of OpenTCS-ROS2 Driver
+= [[anchor]]Development Of OpenTCS-ROS2 Driver
+
 
 [[research-existing-work]]
 [[anchor-1]]Research Existing Work
