--- a/openTCS-NeNa-Documentation/src/docs/user_guide/user_guide.adoc
+++ b/openTCS-NeNa-Documentation/src/docs/user_guide/user_guide.adoc
@@ -4,7 +4,7 @@
 [[anchor]]Setup
 ---------------
 
-NOTE: The setup has only been tested with Ubuntu 18.04 LTS and sROS
+NOTE: The setup has only been tested with Ubuntu 18.04 LTS and ROS
 Dashing Diademata and with the
 http://emanual.robotis.com/docs/en/platform/turtlebot3/ros2_setup/[TurtleBot3]
 robot.
@@ -13,9 +13,11 @@ robot.
 [[anchor-1]]Prerequisites
 ~~~~~~~~~~~~~~~~~~~~~~~~~
 
-Install the Turtlebot 3 environment for ROS2
+Install the Turtlebot 3 environment for ROS2 dashing
 (http://emanual.robotis.com/docs/en/platform/turtlebot3/ros2_setup/[link])
 on your local machine.
+
+If you want to use the OpenTCS-ROS2 driver with a Turtlebot 3 Simulation, follow the setup guides for the https://emanual.robotis.com/docs/en/platform/turtlebot3/ros2_simulation/#turtlebot3-simulation-using-gazebo[Turtlebot 3 Simulation with Gazebo]. It is crucial that that the robot supports Navigation2 and ROS2 default positioning channels such as `amcl_pose`. If you just follow the https://emanual.robotis.com/docs/en/platform/turtlebot3/ros2_simulation/#turtlebot3-simulation-using-gazebo[simulation guide], it should be all good.
 
 [[setup-1-using-opentcs-binary-recommend]]
 [[anchor-2]]Setup (1) using OpenTCS Binary (recommend)
@@ -28,7 +30,7 @@ With this setup, the complete OpenTCS binary will be used that includes
 the ROS2 vehicle driver. This setup is recommended if you are not
 planning to use other vehicle drivers besides the ROS2 vehicle driver.
 
-1.  Download binary from the release page.
+1.  Download the latest binary from the https://github.com/nielstiben/openTCS-NeNa/releases/[release page].
 2.  Extract the binary to a location of choice.
 
 OpenTCS can now be started by executing the regular OpenTCS starter
@@ -101,13 +103,24 @@ this could also be done in the Kernel Control Center Panel.
 Now our simulation with Gazebo and RViz with navigation has been
 started, we are ready to use the OpenTCS.
 
-1.  Download the example plant for the TurtleBot3 World link:../turtlebot3_world_example_plant/example_model_scaled.xml[(link)].
-2.  Start OpenTCS Kernel and the OpenTCS Plant Overview.
-3.  Load the example plant in the Plant Overview (CTRL + L).
-4.  Persist the example plant to the Kernel. (ALT + P).
-5.  Switch the Plant Overview to ‘operating mode’ (ALT + O).
-6.  Start OpenTCS Kernel Control Center.
-7.  Select the first vehicle (‘Bus1’) and open the ‘ROS2 Options’ panel.
-8.  Enable the driver.
-9.  The AGV is now ready to be used. You can test it by pushing the
-‘Dispatch to point’ button.
+1.  Download the example plant for the TurtleBot3 World link:../turtlebot3_world_example_plant/[(link)] to a location of choice on your local machine.
+2.  Start the OpenTCS Kernel
+    a. Open terminal: `CTRL + ALT + T`
+    b. Change working directory to OpenTCS Kernel: `cd <opentcs_binary_path>/openTCS-NeNa-<version>-bin/openTCS-NeNa-Kernel/`
+    c. Start kernel: `sh startKernel.sh`
+3.  Start the OpenTCS Plant Overview:
+    a. Open new terminal (`CTRL + ALT + T`)
+    b. Change working directory to OpenTCS Plant Overview: `cd <opentcs_binary_path>/openTCS-NeNa-<version>-bin/openTCS-NeNa-PlantOverview/`
+    c. Start PlantOverview: `sh startPlantOverview.sh`
+4.  In the Plant Overview, load the Turtlebot3 Example that you downloaded in step 1: `File`-> `Load Model...` (CTRL + L).
+5.  Persist the loaded model to the OpenTCS Kernel: `File`-> `Persist model in the kernel` (ALT + P).
+6.  Switch the Plant Overview to ‘operating mode’: `File`-> `Mode`-> `Operating mode` (ALT + O).
+7.  Start the OpenTCS Kernel Control Center. Don't close the Kernel and Plant Overview!
+    a. Open new terminal (`CTRL + ALT + T`)
+    b. Change working directory to OpenTCS Kernel Control Center: `cd <opentcs_binary_path>/openTCS-NeNa-<version>-bin/openTCS-NeNa-KernelControlCenter/`
+    c. Start kernel: `sh startKernelControlCenter.sh`
+8.  On the upper tab, select `Vehicle Driver`
+9.  Double click on the first vehicle in the list (‘Bus1’) and open the ‘ROS2 Options’ panel.
+10.  Enable the driver. You can specify a custom namespace if you have multiple ROS2 robot instances. If you only have one robot, you can leave it empty.
+11.  The AGV is now ready to be used. You can test it by pushing the
+‘Dispatch to point’ button. For instance, if you select point 'Haaksbergen`, the simulated robot will move to a south-west position in the Turtlebot3-World.
