--- a/openTCS-NeNa-Documentation/src/docs/user_guide/user_guide.adoc
+++ b/openTCS-NeNa-Documentation/src/docs/user_guide/user_guide.adoc
@@ -67,12 +67,11 @@ Download the openTCS-NeNa source code:
 cd ~
 git clone https://github.com/nielstiben/openTCS-NeNa.git
 ```
-*Very important!* Specify the _RCLJava workspace_ in `openTCS-NeNa-CommAdapter-ROS2/build.gradle`:
+*Very important!* Specify the _RCLJava workspace_ in `openTCS-NeNa-CommAdapter-ROS2/build.gradle`. Change the directory to ROS2-java workspace on `your` machine. If you followed the steps above, it should look like this. Don't forget to change the `USER` placeholder:
 ```
 cd OpenTCS-NeNa
 gedit ./openTCS-NeNa-CommAdapter-ROS2/build.gradle
 ```
-Change the directory to ROS2-java workspace on `your` machine. If you followed the steps above, it should look like this. Don't forget to change the `USER` placeholder.
 ```
 // ================== Set HERE your Ros2-Java workspace path. ==================
 String ros2JavaPath = '/home/USER/rcljava/ros2_java_ws/'
