--- a/openTCS-NeNa-Documentation/src/docs/user_guide/user_guide.adoc
+++ b/openTCS-NeNa-Documentation/src/docs/user_guide/user_guide.adoc
@@ -80,6 +80,7 @@ String ros2JavaPath = '/home/USER/rcljava/ros2_java_ws/'
 ```
 Build the project using Gradle:
 ```
+cd ~/openTCS-NeNa
 gradle distZip
 ```
 The softwre is now built.
